* src/sdl/input.c: Work around unwanted keyboard events when pressing
  Alt+Tab on Windows.
* src/atari.c, src/ui.c, src/sdl/input.c: Fix abuse of signals.
  Atari800_Exit() calls signal-unsafe functions, so it cannot be called from
  within a signal handler.
* src/sdl/main.c: Close the SDL window when the monitor is used, to avoid
  unnecessary keyboard events.


2011-04-04  James Wilkinson  <james@slor.net>
* configure.ac, Makefile.in: maintain support for older compilers (DOS, BeOS)


2011-04-03  Kostas Nakos  <knakos@gmail.com>
* android/*: Implement new screen cropping preferences,
             some small port fixes,
             implement new arrow key derotation workaround for ext. keyboards


** 2.2.0 released on 2011-04-02 at Atariada in Prostejov

2011-04-02  Petr Stehlik <pstehlik@sophics.cz>
  Commiting patches submitted by Tomasz Krasuski <tomasz.krasuski@interia.pl>
  and Achim Haertel <aha_33@t-online.de>:
* many files: Tomasz Krasuski's large patch that adds a new control to the GUI,
  a slider which allows to adjust a numeric value using left and right arrows.
  The slider is used in the colour controls (brightness, contrast etc.) and in
  NTSC Filter settings. The colour/palette settings and NTSC Filter settings
  are now saved in the config file. Color handling in UI got better names:
  "Color preset", "Standard", "Deep" and "Vibrant".
  Added the option "Filter preset" to Display settings->NTSC Filter settings.
  This option allows to adjust several presets for the NTSC filter: 
  Composite, S-Video, RGB and Monochrome. Previously this option was available 
  only as a keyboard shortcut in the SDL port. Also see -ntsc-filter-preset in 
  the command line.
  Added a new function PreInitialise() that is intended to contain any
  initialisation code that needs to be called before reading of the config file.
  Fixed a few compilation errors and warnings for the MSVC build, and slightly